<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="grpc_host">165.246.43.162</string>
    <string name="grpc_port">50051</string>
    <string name="easytrack_campaign_id">2</string>
    <string name="samples_count">%1$d samples</string>


    <string name="app_name">EasyTrack\nAndroid Agent App</string>
    <string name="device_as_data_source">smartphone-android</string>
    <string name="ConnectionEstablishedMsg">Connection established</string>
    <string name="ConnectionTerminateddMsg">Connection terminated</string>
    <string name="ConnectionAlreadyExist">Already connected</string>
    <string name="ConnectionDoesNotExists">Connection doesn\'t exist</string>
    <string name="ConnectionFailure">Connection failure occurred</string>
    <string name="NoPeersFound">No peers found</string>
    <string name="buttonConnect">Connect Device</string>
    <string name="buttonDisconnect">Disconnect Device</string>
    <string name="buttonSend">Send</string>
    <string name="dummy">Dummy</string>
    <string name="status">Status:</string>
    <string name="configurations">Configurations</string>
    <string name="view_database">View Database</string>
    <string name="database">Database</string>
    <string name="sensor_data">Sensor data will be displayed here…</string>
    <string name="refresh_window">Refresh window</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="clean_database">CLEAN DATABASE</string>
    <string name="start_data_collection">Start data collection</string>
    <string name="stop_data_collection">Stop data collection</string>
    <string name="upload_sensor_data">Upload sensor data (%1$d)</string>
    <string name="cancel_upload_sensor_data">Cancel upload-action</string>
    <string name="log">LOG:</string>
    <string name="authentication">Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
</resources>