<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <LinearLayout
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/authentication"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_light"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:background="@drawable/login_entry_box_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="UnusedAttribute" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginButtonClick"
            android:text="@string/login" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerButtonClick"
            android:text="@string/register" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/clickBlockPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundColor"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

</RelativeLayout>