<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:orientation="vertical"    tools:context=".MainActivity">    <LinearLayout        android:id="@+id/topLinearLayout"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentTop="true"        android:background="@color/colorPrimary"        android:gravity="center_horizontal"        android:orientation="vertical"        android:padding="10dp">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/app_name"            android:textColor="@android:color/white"            android:textSize="24sp"            android:textStyle="bold" />        <TextView            android:id="@+id/tvStatus"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:gravity="center"            android:text="@string/dummy"            android:textAlignment="center"            android:textColor="@android:color/holo_green_light"            android:textSize="12sp"            android:textStyle="bold" />    </LinearLayout>    <TextView        android:id="@+id/filesCountTextView"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/topLinearLayout"        android:gravity="center_horizontal"        android:text="@string/dummy"        android:textSize="16sp" />    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_above="@+id/controlLinearLayout"        android:layout_below="@id/filesCountTextView"        android:background="#eee"        android:padding="10dp">        <TextView            android:id="@+id/logTextView"            android:layout_width="match_parent"            android:layout_height="0dp"            android:text="@string/dummy"            android:textSize="12sp" />    </ScrollView>    <LinearLayout        android:id="@id/controlLinearLayout"        style="?android:buttonBarStyle"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:background="@color/colorPrimary">        <Button            style="?android:buttonBarButtonStyle"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:drawableTop="@drawable/start_data_collection"            android:text="@string/start_data_collection"            android:textColor="@android:color/white" />        <Button            style="?android:buttonBarButtonStyle"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:drawableTop="@drawable/stop_data_collection"            android:text="@string/stop_data_collection"            android:textColor="@android:color/white" />        <Button            style="?android:buttonBarButtonStyle"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:drawableTop="@drawable/upload_sensor_data"            android:text="@string/upload_sensor_data"            android:textColor="@android:color/white" />    </LinearLayout></RelativeLayout>